address some linter warnings (mostly related to migrating to java 17)